Miscellaneous updates/bug-fixes - too numerous and minor to mention...